<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/edtSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edt1"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:text="@string/Genre"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/edtSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edt2"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/edtYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edt3"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/test"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Rating"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Spinner
        android:id="@+id/spinnerRating1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnINSERT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert"></Button>

        <Button
            android:id="@+id/btnSHOW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/showlist"></Button>
    </LinearLayout>


</LinearLayout>