<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".ShowList">


    <Button
        android:id="@+id/btnRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showAll" />

    <Spinner
        android:id="@+id/spinnerRating2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50px">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Genre" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/year" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Rating" />
    </LinearLayout>

    <ListView
        android:id="@+id/showallmovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50px"
        android:layout_marginTop="50px" />


</LinearLayout>